<resources>
    <string name="app_name">News On The Go</string>
    <string name="home_menu">Home</string>
    <string name="category_menu">Category</string>
    <string name="bookmarked_menu">Bookmarked</string>
    <!--to toggle the open close button
        of the navigation drawer-->
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="mediastacknews_access_key">84f9e4214876d42191a24002fe895470</string>
    <string name="default_country_india">in</string>
    <string name="default_language_english">en</string>
    <string name="news_title_here_placeholder">News title here</string>
    <string name="published_at_placeholder">Published at</string>
    <string name="live_news_fetching_error_msg">There is some error while fetching news</string>
    <string name="search_news_fab_text">Search News</string>
    <string name="app_desc_basic">Get all Live news on the go!</string>
    <string name="news_category_general">general</string>
    <string name="news_category_business">business</string>
    <string name="news_category_entertainment">entertainment</string>
    <string name="news_category_science">science</string>
    <string name="news_category_sports">sports</string>
    <string name="news_category_health">health</string>
    <string name="news_category_technology">technology</string>
    <string name="default_sort_order">published_desc</string>
    <string name="settings_menu">Settings</string>
    <string name="database_name">news_db</string>
    <string name="error_message">Something went wrong!</string>
    <string name="internet_connectivity_error">Internet connectivity failed</string>
    <string name="bookmarked_news">Bookmarked News</string>
    <string name="category">Category</string>
    <string name="news_image">News Image</string>
    <string name="news_title_here">News title here</string>
    <string name="more_actions">More Actions</string>
    <string name="add_to_bookmark">Add to Bookmark</string>
    <string name="share">Share</string>
    <string name="news_description_here">News description here</string>
    <string name="search_query_hint">Search for news eg. Science, Business</string>
    <string name="select_category">Select Category</string>
    <string name="business">Business</string>
    <string name="entertainment">Entertainment</string>
    <string name="health">Health</string>
    <string name="science">Science</string>
    <string name="sports">Sports</string>
    <string name="technology">Technology</string>
    <string name="source">Source</string>
    <string name="no_info_available">Nothing available to show you here...</string>
    <string name="retry">Retry</string>
    <string name="news">News</string>
    <string name="settings">Settings</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="search_news">Search News</string>
    <string name="live_news">Live News</string>
    <string name="general">General</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>