<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/liveNewsFragment"
            android:checked="true"
            android:icon="@drawable/icon_home"
            android:title="@string/home_menu" />

        <item
            android:id="@+id/newsCategoryFragment"
            android:icon="@drawable/icon_category"
            android:title="@string/category_menu" />

        <item
            android:id="@+id/bookmarkedNewsFragment"
            android:icon="@drawable/icon_bookmarks"
            android:title="@string/bookmarked_menu" />

        <item
            android:id="@+id/mySettingsFragment"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings_menu"/>
    </group>
</menu>