<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/liveNewsFragment">

    <fragment
        android:id="@+id/liveNewsFragment"
        android:name="com.shubhampandey.livenewsonthego.ui.fragment.DisplayLiveNewsFragment"
        android:label="@string/live_news"
        tools:layout="@layout/fragment_display_live_news">
        <action
            android:id="@+id/action_liveNewsFragment_to_displaySearchedNewsFragment"
            app:destination="@id/searchNewsFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/searchNewsFragment"
        android:name="com.shubhampandey.livenewsonthego.ui.fragment.SearchNewsFragment"
        android:label="@string/search_news"
        tools:layout="@layout/fragment_display_search_news" />
    <fragment
        android:id="@+id/newsCategoryFragment"
        android:name="com.shubhampandey.livenewsonthego.ui.fragment.CategorySelectionFragment"
        android:label="@string/category"
        tools:layout="@layout/fragment_news_category">
        <action
            android:id="@+id/action_newsCategoryFragment_to_displaySingleCategoryNewsFragment"
            app:destination="@id/displaySingleCategoryNewsFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/bookmarkedNewsFragment"
        android:name="com.shubhampandey.livenewsonthego.ui.fragment.BookmarkedNewsFragment"
        android:label="@string/bookmarks"
        tools:layout="@layout/fragment_bookmarked_news" />
    <fragment
        android:id="@+id/displaySingleCategoryNewsFragment"
        android:name="com.shubhampandey.livenewsonthego.ui.fragment.DisplayCategoryNewsFragment"
        android:label="@string/news"
        tools:layout="@layout/fragment_display_category_news" >
        <argument
            android:name="category_type"
            app:argType="string"
            android:defaultValue="general" />
    </fragment>
    <fragment
        android:id="@+id/displayFullNewsFragment"
        android:name="com.shubhampandey.livenewsonthego.ui.fragment.DisplayFullNewsFragment"
        android:label="@string/news"
        tools:layout="@layout/fragment_display_full_news" />
    <fragment
        android:id="@+id/mySettingsFragment"
        android:name="com.shubhampandey.livenewsonthego.ui.fragment.MySettingsFragment"
        android:label="@string/settings" />
</navigation>