<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/unit_10dp"
    app:cardElevation="@dimen/unit_10dp"
    app:cardCornerRadius="@dimen/unit_10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/compactNewsImage_IV"
            android:layout_width="140dp"
            android:layout_height="120dp"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/compactNewsTitle_TV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:ellipsize="end"
            android:padding="@dimen/unit_10dp"
            android:text="@string/news_title_here_placeholder"
            android:textColor="?android:attr/textColorPrimary"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/compactNewsImage_IV"
            app:layout_constraintTop_toTopOf="@+id/compactNewsImage_IV" />

        <TextView
            android:id="@+id/compactNewsPublishedAt_TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?android:attr/textColorPrimary"
            android:paddingStart="@dimen/unit_10dp"
            android:text="@string/published_at_placeholder"
            app:layout_constraintStart_toStartOf="@+id/compactNewsTitle_TV"
            app:layout_constraintTop_toBottomOf="@+id/compactNewsTitle_TV" />

        <TextView
            android:id="@+id/compactNewsSource_TV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/unit_10dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="?android:attr/textColorPrimary"
            android:paddingStart="@dimen/unit_10dp"
            android:paddingEnd="@dimen/unit_10dp"
            android:text="@string/source"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/compactNewsPublishedAt_TV"
            app:layout_constraintTop_toBottomOf="@+id/compactNewsPublishedAt_TV" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>