<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    tools:context=".ui.fragment.CategorySelectionFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            android:id="@+id/category_frag_no_connection_Layout"
            layout="@layout/no_internet"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/categorySelection_LL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/unit_10dp"
                app:cardCornerRadius="@dimen/unit_10dp"
                app:cardElevation="@dimen/unit_20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/unit_10dp"
                    android:drawablePadding="@dimen/unit_10dp"
                    android:gravity="center_vertical"
                    android:text="@string/select_category"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_20sp"
                    app:drawableStartCompat="@drawable/icon_category_40dp" />
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/unit_10dp"
                android:weightSum="2">

                <LinearLayout
                    android:id="@+id/categoryGeneralNews"
                    style="@style/single_news_category_style">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/unit_10dp"
                        android:layout_marginTop="@dimen/unit_20dp"
                        android:src="@drawable/icon_blur_circular"
                        app:tint="@color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/unit_10dp"
                        android:layout_marginTop="@dimen/unit_20dp"
                        android:layout_marginBottom="@dimen/unit_20dp"
                        android:text="@string/general"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_20sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/categoryBusinessNews"
                    style="@style/single_news_category_style">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/unit_10dp"
                        android:layout_marginTop="@dimen/unit_20dp"
                        android:src="@drawable/icon_business"
                        app:tint="@color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/unit_10dp"
                        android:layout_marginTop="@dimen/unit_20dp"
                        android:layout_marginBottom="@dimen/unit_20dp"
                        android:text="@string/business"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_20sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/unit_10dp"
                android:weightSum="2">

                <LinearLayout
                    android:id="@+id/categoryEntNews"
                    style="@style/single_news_category_style">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/unit_10dp"
                        android:layout_marginTop="@dimen/unit_20dp"
                        android:src="@drawable/icon_movie"
                        app:tint="@color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/unit_10dp"
                        android:layout_marginTop="@dimen/unit_20dp"
                        android:layout_marginBottom="@dimen/unit_20dp"
                        android:text="@string/entertainment"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_20sp" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/categoryHealthNews"
                    style="@style/single_news_category_style">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/unit_10dp"
                        android:layout_marginTop="@dimen/unit_20dp"
                        android:src="@drawable/icon_health_and_safety"
                        app:tint="@color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/unit_10dp"
                        android:layout_marginTop="@dimen/unit_20dp"
                        android:layout_marginBottom="@dimen/unit_20dp"
                        android:text="@string/health"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_20sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/unit_10dp"
                android:weightSum="2">

                <LinearLayout
                    android:id="@+id/categoryScienceNews"
                    style="@style/single_news_category_style">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/unit_20dp"
                        android:layout_marginTop="@dimen/unit_20dp"
                        android:src="@drawable/icon_science"
                        app:tint="@color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/unit_20dp"
                        android:layout_marginTop="@dimen/unit_20dp"
                        android:layout_marginBottom="@dimen/unit_20dp"
                        android:text="@string/science"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_20sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/categorySportsNews"
                    style="@style/single_news_category_style">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/unit_20dp"
                        android:layout_marginTop="@dimen/unit_20dp"
                        android:src="@drawable/icon_sports_cricket"
                        app:tint="@color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/unit_20dp"
                        android:layout_marginTop="@dimen/unit_20dp"
                        android:layout_marginBottom="@dimen/unit_20dp"
                        android:text="@string/sports"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_20sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/unit_10dp"
                android:weightSum="1">

                <LinearLayout
                    android:id="@+id/categoryTechNews"
                    style="@style/single_news_category_style"
                    android:layout_marginBottom="@dimen/unit_20dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/unit_20dp"
                        android:layout_marginTop="@dimen/unit_20dp"
                        android:src="@drawable/icon_computer"
                        app:tint="@color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/unit_20dp"
                        android:layout_marginTop="@dimen/unit_20dp"
                        android:layout_marginBottom="@dimen/unit_20dp"
                        android:text="@string/technology"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_20sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>